--- a/GCSViews/FlightData.zh-Hans.resx
+++ b/GCSViews/FlightData.zh-Hans.resx
@@ -118,20 +118,108 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="recordHudToAVIToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="contextMenuStripHud.Size" type="System.Drawing.Size, System.Drawing">
+    <value>169, 136</value>
+  </data>
+  <data name="hud1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>358, 265</value>
+  </data>
+  <data name="tabQuick.Size" type="System.Drawing.Size, System.Drawing">
+    <value>350, 0</value>
+  </data>
+  <data name="tabQuick.Text" xml:space="preserve">
+    <value>快速</value>
+  </data>
+  <data name="tabActions.Size" type="System.Drawing.Size, System.Drawing">
+    <value>350, 0</value>
+  </data>
+  <data name="tabActions.Text" xml:space="preserve">
+    <value>动作</value>
+  </data>
+  <data name="tabActionsSimple.Size" type="System.Drawing.Size, System.Drawing">
+    <value>350, 0</value>
+  </data>
+  <data name="tabActionsSimple.Text" xml:space="preserve">
+    <value>简单动作</value>
+  </data>
+  <data name="tabPagePreFlight.Size" type="System.Drawing.Size, System.Drawing">
+    <value>350, 0</value>
+  </data>
+  <data name="tabPagePreFlight.Text" xml:space="preserve">
+    <value>起飞前检查</value>
+  </data>
+  <data name="tabGauges.Size" type="System.Drawing.Size, System.Drawing">
+    <value>350, 0</value>
+  </data>
+  <data name="tabGauges.Text" xml:space="preserve">
+    <value>仪表</value>
+  </data>
+  <data name="tabStatus.Size" type="System.Drawing.Size, System.Drawing">
+    <value>350, 0</value>
+  </data>
+  <data name="tabStatus.Text" xml:space="preserve">
+    <value>状态</value>
+  </data>
+  <data name="tabServo.Size" type="System.Drawing.Size, System.Drawing">
+    <value>350, 0</value>
+  </data>
+  <data name="tabServo.Text" xml:space="preserve">
+    <value>舵机</value>
+  </data>
+  <data name="tabTLogs.Size" type="System.Drawing.Size, System.Drawing">
+    <value>350, 0</value>
+  </data>
+  <data name="tabTLogs.Text" xml:space="preserve">
+    <value>遥测日志</value>
+  </data>
+  <data name="tablogbrowse.Size" type="System.Drawing.Size, System.Drawing">
+    <value>350, 0</value>
+  </data>
+  <data name="tablogbrowse.Text" xml:space="preserve">
+    <value>数据闪存日志</value>
+  </data>
+  <data name="tabScripts.Size" type="System.Drawing.Size, System.Drawing">
+    <value>350, 0</value>
+  </data>
+  <data name="tabScripts.Text" xml:space="preserve">
+    <value>脚本</value>
+  </data>
+  <data name="tabPagemessages.Size" type="System.Drawing.Size, System.Drawing">
+    <value>350, 0</value>
+  </data>
+  <data name="tabPagemessages.Text" xml:space="preserve">
+    <value>消息</value>
+  </data>
+  <data name="tabPayload.Size" type="System.Drawing.Size, System.Drawing">
+    <value>350, 0</value>
+  </data>
+  <data name="tabControlactions.Size" type="System.Drawing.Size, System.Drawing">
+    <value>358, 33</value>
+  </data>
+  <data name="splitContainer2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>358, 189</value>
+  </data>
+  <data name="SubMainLeft.Size" type="System.Drawing.Size, System.Drawing">
+    <value>360, 462</value>
+  </data>
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="SubMainLeft.SplitterDistance" type="System.Int32, mscorlib">
+    <value>267</value>
+  </data>
+  <data name="tableMap.Size" type="System.Drawing.Size, System.Drawing">
+    <value>642, 460</value>
+  </data>
+  <data name="MainH.Size" type="System.Drawing.Size, System.Drawing">
+    <value>1008, 462</value>
+  </data>
+  <data name="videoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>168, 22</value>
   </data>
   <data name="recordHudToAVIToolStripMenuItem.Text" xml:space="preserve">
     <value>录制Hud至AVI</value>
   </data>
-  <data name="stopRecordToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>168, 22</value>
-  </data>
   <data name="stopRecordToolStripMenuItem.Text" xml:space="preserve">
     <value>停止记录</value>
-  </data>
-  <data name="setMJPEGSourceToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>168, 22</value>
   </data>
   <data name="setMJPEGSourceToolStripMenuItem.Text" xml:space="preserve">
     <value>设置MJPEG源</value>
@@ -157,53 +245,11 @@
   <data name="swapWithMapToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>168, 22</value>
   </data>
-  <data name="contextMenuStripHud.Size" type="System.Drawing.Size, System.Drawing">
-    <value>169, 158</value>
-  </data>
-  <data name="hud1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>358, 265</value>
-  </data>
-  <data name="quickView6.Location" type="System.Drawing.Point, System.Drawing">
-    <value>175, 107</value>
-  </data>
-  <data name="quickView6.Size" type="System.Drawing.Size, System.Drawing">
-    <value>166, 47</value>
-  </data>
-  <data name="quickView5.Location" type="System.Drawing.Point, System.Drawing">
-    <value>3, 107</value>
-  </data>
-  <data name="quickView5.Size" type="System.Drawing.Size, System.Drawing">
-    <value>166, 47</value>
-  </data>
-  <data name="quickView4.Location" type="System.Drawing.Point, System.Drawing">
-    <value>175, 55</value>
-  </data>
-  <data name="quickView4.Size" type="System.Drawing.Size, System.Drawing">
-    <value>166, 46</value>
-  </data>
-  <data name="quickView3.Location" type="System.Drawing.Point, System.Drawing">
-    <value>3, 55</value>
-  </data>
-  <data name="quickView3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>166, 46</value>
-  </data>
-  <data name="quickView2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>166, 46</value>
-  </data>
-  <data name="quickView1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>166, 46</value>
-  </data>
-  <data name="quickView1.ToolTip" xml:space="preserve">
-    <value>双击我修改</value>
+  <data name="groundColorToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>168, 22</value>
   </data>
   <data name="tableLayoutPanelQuick.Size" type="System.Drawing.Size, System.Drawing">
-    <value>344, 157</value>
-  </data>
-  <data name="tabQuick.Size" type="System.Drawing.Size, System.Drawing">
-    <value>350, 163</value>
-  </data>
-  <data name="tabQuick.Text" xml:space="preserve">
-    <value>快速</value>
+    <value>344, 0</value>
   </data>
   <data name="BUT_resumemis.Text" xml:space="preserve">
     <value>恢复任务</value>
@@ -289,12 +335,6 @@
   <data name="BUTactiondo.ToolTip" xml:space="preserve">
     <value>预先在左侧形成动作</value>
   </data>
-  <data name="tabActions.Size" type="System.Drawing.Size, System.Drawing">
-    <value>350, 163</value>
-  </data>
-  <data name="tabActions.Text" xml:space="preserve">
-    <value>动作</value>
-  </data>
   <data name="myButton1.Text" xml:space="preserve">
     <value>留待</value>
   </data>
@@ -304,59 +344,23 @@
   <data name="myButton3.Text" xml:space="preserve">
     <value>自动</value>
   </data>
-  <data name="tabActionsSimple.Size" type="System.Drawing.Size, System.Drawing">
-    <value>350, 163</value>
-  </data>
-  <data name="tabActionsSimple.Text" xml:space="preserve">
-    <value>简单动作</value>
-  </data>
   <data name="checkListControl1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>344, 157</value>
-  </data>
-  <data name="tabPagePreFlight.Size" type="System.Drawing.Size, System.Drawing">
-    <value>350, 163</value>
-  </data>
-  <data name="tabPagePreFlight.Text" xml:space="preserve">
-    <value>起飞前检查</value>
+    <value>344, 0</value>
   </data>
   <data name="Gspeed.ToolTip" xml:space="preserve">
     <value>双击我改变最大值</value>
   </data>
-  <data name="tabGauges.Size" type="System.Drawing.Size, System.Drawing">
-    <value>350, 163</value>
-  </data>
-  <data name="tabGauges.Text" xml:space="preserve">
-    <value>仪表</value>
-  </data>
-  <data name="tabStatus.Size" type="System.Drawing.Size, System.Drawing">
-    <value>350, 163</value>
-  </data>
-  <data name="tabStatus.Text" xml:space="preserve">
-    <value>状态</value>
-  </data>
   <data name="flowLayoutPanelServos.Size" type="System.Drawing.Size, System.Drawing">
-    <value>344, 157</value>
+    <value>344, 0</value>
   </data>
-  <data name="tabServo.Size" type="System.Drawing.Size, System.Drawing">
-    <value>350, 163</value>
-  </data>
-  <data name="tabServo.Text" xml:space="preserve">
-    <value>舵机</value>
+  <data name="tableLayoutPaneltlogs.Size" type="System.Drawing.Size, System.Drawing">
+    <value>350, 0</value>
   </data>
   <data name="BUT_loadtelem.Text" xml:space="preserve">
     <value>加载日志</value>
   </data>
-  <data name="lbl_playbackspeed.Location" type="System.Drawing.Point, System.Drawing">
-    <value>384, 63</value>
-  </data>
-  <data name="lbl_logpercent.Location" type="System.Drawing.Point, System.Drawing">
-    <value>384, 33</value>
-  </data>
   <data name="tracklog.Size" type="System.Drawing.Size, System.Drawing">
-    <value>289, 24</value>
-  </data>
-  <data name="LBL_logfn.Size" type="System.Drawing.Size, System.Drawing">
-    <value>330, 24</value>
+    <value>289, 27</value>
   </data>
   <data name="BUT_log2kml.Text" xml:space="preserve">
     <value>Tlog &gt; Kml 或图像</value>
@@ -364,23 +368,14 @@
   <data name="BUT_playlog.Text" xml:space="preserve">
     <value>播放/暂停</value>
   </data>
+  <data name="panel2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>289, 49</value>
+  </data>
   <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
     <value>29, 12</value>
   </data>
   <data name="label2.Text" xml:space="preserve">
     <value>速度</value>
-  </data>
-  <data name="panel2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>289, 97</value>
-  </data>
-  <data name="tableLayoutPaneltlogs.Size" type="System.Drawing.Size, System.Drawing">
-    <value>350, 163</value>
-  </data>
-  <data name="tabTLogs.Size" type="System.Drawing.Size, System.Drawing">
-    <value>350, 163</value>
-  </data>
-  <data name="tabTLogs.Text" xml:space="preserve">
-    <value>遥测日志</value>
   </data>
   <data name="BUT_loganalysis.Text" xml:space="preserve">
     <value>自动分析</value>
@@ -400,12 +395,6 @@
   </data>
   <data name="BUT_logbrowse.Text" xml:space="preserve">
     <value>回顾日志</value>
-  </data>
-  <data name="tablogbrowse.Size" type="System.Drawing.Size, System.Drawing">
-    <value>350, 163</value>
-  </data>
-  <data name="tablogbrowse.Text" xml:space="preserve">
-    <value>数据闪存日志</value>
   </data>
   <data name="checkBoxRedirectOutput.Size" type="System.Drawing.Size, System.Drawing">
     <value>108, 16</value>
@@ -437,81 +426,11 @@
   <data name="BUT_select_script.Text" xml:space="preserve">
     <value>选择脚本</value>
   </data>
-  <data name="tabScripts.Size" type="System.Drawing.Size, System.Drawing">
-    <value>350, 163</value>
-  </data>
-  <data name="tabScripts.Text" xml:space="preserve">
-    <value>脚本</value>
-  </data>
   <data name="txt_messagebox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>344, 157</value>
-  </data>
-  <data name="tabPagemessages.Size" type="System.Drawing.Size, System.Drawing">
-    <value>350, 163</value>
-  </data>
-  <data name="tabPagemessages.Text" xml:space="preserve">
-    <value>消息</value>
-  </data>
-  <data name="tabControlactions.Size" type="System.Drawing.Size, System.Drawing">
-    <value>358, 189</value>
-  </data>
-  <data name="SubMainLeft.Size" type="System.Drawing.Size, System.Drawing">
-    <value>360, 462</value>
-  </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="SubMainLeft.SplitterDistance" type="System.Int32, mscorlib">
-    <value>267</value>
-  </data>
-  <data name="zg1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>634, 210</value>
-  </data>
-  <data name="goHereToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>172, 22</value>
-  </data>
-  <data name="goHereToolStripMenuItem.Text" xml:space="preserve">
-    <value>飞行至此</value>
-  </data>
-  <data name="flyToHereAltToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>172, 22</value>
-  </data>
-  <data name="flyToHereAltToolStripMenuItem.Text" xml:space="preserve">
-    <value>飞行至此高度</value>
-  </data>
-  <data name="addPoiToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>172, 22</value>
-  </data>
-  <data name="pointCameraHereToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>172, 22</value>
-  </data>
-  <data name="pointCameraHereToolStripMenuItem.Text" xml:space="preserve">
-    <value>在此放置相机</value>
-  </data>
-  <data name="triggerCameraToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>172, 22</value>
-  </data>
-  <data name="triggerCameraToolStripMenuItem.Text" xml:space="preserve">
-    <value>现在按下相机快门</value>
-  </data>
-  <data name="flightPlannerToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>172, 22</value>
-  </data>
-  <data name="flightPlannerToolStripMenuItem.Text" xml:space="preserve">
-    <value>飞行规划器</value>
-  </data>
-  <data name="setHomeHereToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>172, 22</value>
-  </data>
-  <data name="setHomeHereToolStripMenuItem.Text" xml:space="preserve">
-    <value>设置家在此</value>
-  </data>
-  <data name="takeOffToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>172, 22</value>
-  </data>
-  <data name="contextMenuStripMap.Size" type="System.Drawing.Size, System.Drawing">
-    <value>173, 180</value>
+    <value>344, 0</value>
   </data>
   <data name="label6.Location" type="System.Drawing.Point, System.Drawing">
-    <value>283, 393</value>
+    <value>283, 390</value>
   </data>
   <data name="label6.Size" type="System.Drawing.Size, System.Drawing">
     <value>83, 12</value>
@@ -520,7 +439,7 @@
     <value>GPS追踪（黑）</value>
   </data>
   <data name="label5.Location" type="System.Drawing.Point, System.Drawing">
-    <value>225, 393</value>
+    <value>225, 390</value>
   </data>
   <data name="label5.Size" type="System.Drawing.Size, System.Drawing">
     <value>53, 12</value>
@@ -529,7 +448,7 @@
     <value>目标指向</value>
   </data>
   <data name="label3.Location" type="System.Drawing.Point, System.Drawing">
-    <value>142, 393</value>
+    <value>142, 390</value>
   </data>
   <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
     <value>77, 12</value>
@@ -538,7 +457,7 @@
     <value>直达当前航点</value>
   </data>
   <data name="label4.Location" type="System.Drawing.Point, System.Drawing">
-    <value>83, 393</value>
+    <value>83, 390</value>
   </data>
   <data name="label4.Size" type="System.Drawing.Size, System.Drawing">
     <value>53, 12</value>
@@ -546,41 +465,41 @@
   <data name="label4.Text" xml:space="preserve">
     <value>当前指向</value>
   </data>
-  <data name="lbl_hdop.Location" type="System.Drawing.Point, System.Drawing">
-    <value>-1, 377</value>
-  </data>
-  <data name="lbl_hdop.ToolTip" xml:space="preserve">
-    <value>GPS 水平误差</value>
-  </data>
-  <data name="lbl_sats.Location" type="System.Drawing.Point, System.Drawing">
-    <value>-1, 394</value>
-  </data>
-  <data name="lbl_sats.Size" type="System.Drawing.Size, System.Drawing">
-    <value>77, 11</value>
-  </data>
-  <data name="lbl_sats.ToolTip" xml:space="preserve">
-    <value>卫星数量</value>
-  </data>
   <data name="gMapControl1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>589, 421</value>
+    <value>589, 418</value>
   </data>
   <data name="TRK_zoom.Size" type="System.Drawing.Size, System.Drawing">
-    <value>45, 421</value>
+    <value>45, 418</value>
   </data>
   <data name="splitContainer1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>634, 421</value>
+    <value>634, 418</value>
+  </data>
+  <data name="goHereToolStripMenuItem.Text" xml:space="preserve">
+    <value>飞行至此</value>
+  </data>
+  <data name="flyToHereAltToolStripMenuItem.Text" xml:space="preserve">
+    <value>飞行至此高度</value>
+  </data>
+  <data name="pointCameraHereToolStripMenuItem.Text" xml:space="preserve">
+    <value>在此放置相机</value>
+  </data>
+  <data name="triggerCameraToolStripMenuItem.Text" xml:space="preserve">
+    <value>现在按下相机快门</value>
+  </data>
+  <data name="flightPlannerToolStripMenuItem.Text" xml:space="preserve">
+    <value>飞行规划器</value>
+  </data>
+  <data name="setHomeHereToolStripMenuItem.Text" xml:space="preserve">
+    <value>设置家在此</value>
+  </data>
+  <data name="panel1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>1, 426</value>
   </data>
   <data name="Zoomlevel.Location" type="System.Drawing.Point, System.Drawing">
     <value>438, 9</value>
   </data>
   <data name="Zoomlevel.ToolTip" xml:space="preserve">
     <value>改变放大级别</value>
-  </data>
-  <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>401, 12</value>
-  </data>
-  <data name="label1.Text" xml:space="preserve">
-    <value>缩放</value>
   </data>
   <data name="CHK_autopan.Location" type="System.Drawing.Point, System.Drawing">
     <value>325, 12</value>
@@ -602,15 +521,6 @@
   </data>
   <data name="CB_tuning.ToolTip" xml:space="preserve">
     <value>显示调试图表，咬合目标高度和实际高度</value>
-  </data>
-  <data name="panel1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1, 429</value>
-  </data>
-  <data name="tableMap.Size" type="System.Drawing.Size, System.Drawing">
-    <value>642, 460</value>
-  </data>
-  <data name="MainH.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1008, 462</value>
   </data>
   <data name="dataGridViewImageColumn1.HeaderText" xml:space="preserve">
     <value>上</value>
